--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,7 @@
           <configuration>
             <archive>
               <manifestEntries>
-                <Automatic-Module-Name>com.thoughtworks.qdox</Automatic-Module-Name>
+                <Automatic-Module-Name>com.github.shalousun</Automatic-Module-Name>
               </manifestEntries>
             </archive>
           </configuration>
@@ -179,11 +179,11 @@
             <templateFile>${basedir}/src/site/templates/site.vm</templateFile>
           </configuration>
         </plugin>
-        <!--<plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.1</version>
-        </plugin>-->
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -377,6 +377,65 @@
 
   <profiles>
     <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>3.0.1</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- Source -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.2.1</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>jar-no-fork</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <!-- JavaDoc -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>3.2.0</version>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+      <distributionManagement>
+        <snapshotRepository>
+          <id>oss</id>
+          <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </snapshotRepository>
+        <repository>
+          <id>oss</id>
+          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+    <profile>
       <id>linux</id>
       <activation>
         <os>
@@ -433,13 +492,13 @@
         <qdox.byaccj.executable>${basedir}/bootstrap/yacc.exe</qdox.byaccj.executable>
       </properties>
     </profile>
-    <!-- <profile> <id>release-site</id> <activation> <file> <exists>release.properties</exists> 
-      </file> </activation> <build> <filters> <filter>release.properties</filter> 
+    <!-- <profile> <id>release-site</id> <activation> <file> <exists>release.properties</exists>
+      </file> </activation> <build> <filters> <filter>release.properties</filter>
       </filters> </build> </profile> -->
   </profiles>
 
   <!-- Reports -->
-  <!--<reporting>
+  <reporting>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -493,6 +552,6 @@
         </reportSets>
       </plugin>
     </plugins>
-  </reporting>-->
+  </reporting>
 
 </project>
