--- a/src/it/lambda-examples/pom.xml
+++ b/src/it/lambda-examples/pom.xml
@@ -12,7 +12,7 @@
   
   <dependencies>
     <dependency>
-      <groupId>com.thoughtworks.qdox</groupId>
+      <groupId>com.github.shalousun</groupId>
       <artifactId>qdox</artifactId>
       <version>@project.version@</version>
     </dependency>
