--- a/src/it/qdox-241/pom.xml
+++ b/src/it/qdox-241/pom.xml
@@ -29,7 +29,7 @@
     
     <dependencies>
         <dependency>
-            <groupId>com.thoughtworks.qdox</groupId>
+            <groupId>com.github.shalousun</groupId>
             <artifactId>qdox</artifactId>
             <version>@project.version@</version>
         </dependency>
