--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <name>smart-doc-qdox</name>
   <groupId>com.github.shalousun</groupId>
   <artifactId>qdox</artifactId>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>2.0.3-SNAPSHOT</version>
 
   <url>https://github.com/paul-hammant/qdox</url>
   <description>
@@ -372,6 +372,11 @@
       <artifactId>mockito-core</artifactId>
       <version>1.8.5</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>2.0.1</version>
     </dependency>
   </dependencies>
 
