--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <name>smart-doc-qdox</name>
   <groupId>com.github.shalousun</groupId>
   <artifactId>qdox</artifactId>
-  <version>2.0.3-SNAPSHOT</version>
+  <version>2.0.2</version>
 
   <url>https://github.com/paul-hammant/qdox</url>
   <description>
