update: group id

--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
                     <configuration>
                         <archive>
                             <manifestEntries>
-                                <Automatic-Module-Name>com.github.shalousun</Automatic-Module-Name>
+                                <Automatic-Module-Name>com.ly.smartdoc</Automatic-Module-Name>
                             </manifestEntries>
                         </archive>
                     </configuration>
@@ -443,7 +443,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.2.0</version>
+                        <version>3.4.0</version>
                         <executions>
                             <execution>
                                 <phase>package</phase>
