--- a/src/it/qdox-224/pom.xml
+++ b/src/it/qdox-224/pom.xml
@@ -24,7 +24,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.github.shalousun</groupId>
+      <groupId>com.ly.smart-doc</groupId>
       <artifactId>qdox</artifactId>
       <version>@project.version@</version>
     </dependency>
