--- a/src/it/qdox-241/pom.xml
+++ b/src/it/qdox-241/pom.xml
@@ -31,7 +31,7 @@
         <dependency>
             <groupId>com.ly.smart-doc</groupId>
             <artifactId>qdox</artifactId>
-            <version>2.0.3.3</version>
+            <version>@project.version@</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
